# nextcanvas

./: .gitignore  AGENTS.md  CLAUDE.md  TODO.md  package-lock.json  package.json
.github/workflows/: npm-publish.yml
demo/: global.d.ts  next.config.js  package-lock.json  package.json
demo/app/: DemoCanvas.tsx  InstallPill.tsx  ThemeToggle.tsx  agent-setup.ts  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  site.ts  sitemap.ts  speakers.ts
demo/app/api/nextcanvas/: acknowledge.ts
demo/app/api/nextcanvas/edit/: route.ts
demo/app/api/nextcanvas/overlay.js/: route.ts
demo/app/api/nextcanvas/style/: route.ts
demo/app/docs/: DocsSideNav.tsx  Pager.tsx  docs.css  layout.tsx  nav.ts  page.tsx
demo/app/docs/attributes/: page.tsx
demo/app/docs/bound-text/: page.tsx
demo/app/docs/quickstart/: page.tsx
demo/app/docs/styles/: page.tsx
demo/app/docs/text/: page.tsx
demo/app/docs/toolbar/: page.tsx
demo/app/docs/what-works/: page.tsx
demo/app/skill.md/: route.ts
nextcanvas/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
nextcanvas/scripts/: copy-wasm.mjs
nextcanvas/src/: cli.ts  globals.d.ts  index.ts  next.ts  overlay.ts  server.ts
nextcanvas/swc/: nextcanvas_swc.wasm
nextcanvas/swc-plugin/: Cargo.toml  build.rs
nextcanvas/swc-plugin/src/: lib.rs
nextcanvas/test/: bound-text.test.js  server.test.js
